fixed horizontal centering issue on small screens

--- a/style.css
+++ b/style.css
@@ -23,8 +23,7 @@ body {
 }
 
 .greeting {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     margin: 0;
     color: #CACACA;
     font-family: muli, sans-serif;
@@ -34,8 +33,7 @@ body {
 }
 
 .bio {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     margin: 0;
     color: #8a8a8a;
     font-family: muli, sans-serif;
